Squashing bugs

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,10 +9,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(../images/vatreni.gif);
+  /* background-image: url(../images/vatreni.gif);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 main {
